--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up JDK 17
@@ -19,12 +19,13 @@ jobs:
         distribution: temurin
         java-version: 17
 
-    - name: Build with Gradle
+    - name: Build with Gradle (without wrapper)
       uses: gradle/gradle-build-action@v2
       with:
+        gradle-version: '8.3'  # نسخه گرادل مناسب پروژه، در صورت نیاز تغییر بده
         arguments: assembleDebug
 
-    - name: Upload APK
+    - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
         name: debug-apk
