--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build with Gradle (without wrapper)
       uses: gradle/gradle-build-action@v2
       with:
-        gradle-version: '8.3'  # نسخه گرادل مناسب پروژه، در صورت نیاز تغییر بده
+        gradle-version: '8.4'  # ← این خط رو تغییر دادیم
         arguments: assembleDebug
 
     - name: Upload Debug APK
