--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Build with Gradle (without wrapper)
       uses: gradle/gradle-build-action@v2
       with:
-        gradle-version: '8.4'  # ← این خط رو تغییر دادیم
-        arguments: assembleDebug
+        gradle-version: '8.4'
+        arguments: assembleDebug --no-build-cache   # <-- اضافه شد
 
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
